# higgsfield-memory-service

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
fixtures/recall_quality/: README.md  scenario_01_personal_facts.json  scenario_02_fact_evolution.json  scenario_03_preferences_corrections.json  scenario_04_multi_hop.json  scenario_05_noise_resistance.json
migrations/: env.py
migrations/versions/: 0001_init.py  0002_add_embedding_and_tsv.py
src/memory_service/: config.py  db.py  deps.py  embeddings.py  extraction.py  main.py  recall.py  retrieval.py  schemas.py
src/memory_service/api/: admin.py  health.py  memories.py  recall.py  search.py  turns.py
tests/: conftest.py  recall_quality_runner.py  test_contract_smoke.py  test_embeddings_unit.py  test_extraction_live.py  test_extraction_unit.py  test_recall_quality.py  test_recall_unit.py  test_retrieval_unit.py  test_search_live.py  test_supersession_live.py
