[project]
name = "memory-service"
version = "0.1.0"
description = "Memory service for an AI agent — ingest, extract, recall."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.136,<0.137",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.13,<3",
    "pydantic-settings>=2.6,<3",
    "asyncpg>=0.30,<0.31",
    "pgvector>=0.3.6,<0.4",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "alembic>=1.14,<2",
    "anthropic>=0.40,<1",
    "voyageai>=0.3,<1",
    "tiktoken>=0.8,<1",
    "httpx>=0.27,<1",
    "orjson>=3.10,<4",
    "python-json-logger>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "anyio>=4.6,<5",
    "ruff>=0.15,<0.16",
    "respx>=0.21,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_service"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = ["E501"]    # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
